--- a/assets/css/cascade/development/build-full.css
+++ b/assets/css/cascade/development/build-full.css
@@ -145,7 +145,7 @@ audio:not([controls]) {
     float:none;
 }
 
-section,article,header,footer,aside,nav,img,.nav,.col,.tabs,.tab-content,.sizefit,.nav li,button,.button,.button-group,.nav a,.left li li,.tabs .left,.right li li {
+section,article,header,footer,aside,nav,img,.nav,.row,.tabs,.tab-content,.sizefit,.nav li,button,.button,.button-group,.nav a,.left li li,.tabs .left,.right li li {
     float:left;
 }
 
@@ -503,7 +503,7 @@ blockquote {
     width:18px;
 }
 
-section,article,header,footer,aside,nav,.col,.tabs {
+section,article,header,footer,aside,nav,.row,.tabs {
     min-height:1px;
 }
 
@@ -516,7 +516,7 @@ section,article,header,footer,aside,nav,.col,.tabs {
     min-width:50px;
 }
 
-section,article,header,footer,aside,nav,.site-footer,.site-header,table,.col,.tabs,.tab-content,.tabs .nav,figure img,.tree li {
+section,article,header,footer,aside,nav,.site-footer,.site-header,table,.row,.tabs,.tab-content,.tabs .nav,figure img,.tree li {
     width:100%;
 }
 
@@ -1612,14 +1612,14 @@ input,textarea {
         display: none !important;
     }
 
-    section,article,header,footer,aside,nav,.col,
+    section,article,header,footer,aside,nav,.row,
     section.sizefit,section.sizefill,
     article.sizefit,article.sizefill,
     header.sizefit,header.sizefill,
     footer.sizefit,footer.sizefill,
     aside.sizefit,aside.sizefill,
     nav.sizefit,nav.sizefill,
-    .col.sizefit,.col.sizefill {
+    .row.sizefit,.row.sizefill {
         padding:0 !important;
         display:block !important;
         float:left !important;
@@ -1650,14 +1650,14 @@ input,textarea {
     footer.mobile-sizefill,
     aside.mobile-sizefill,
     nav.mobile-sizefill,
-    .col.mobile-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
+    .row.mobile-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
     section.mobile-sizefit,
     article.mobile-sizefit,
     header.mobile-sizefit,
     footer.mobile-sizefit,
     aside.mobile-sizefit,
     nav.mobile-sizefit,
-    .col.mobile-sizefit {width:auto!important;}
+    .row.mobile-sizefit {width:auto!important;}
 
     .mobile-center {
         float:none !important;
@@ -1673,14 +1673,14 @@ input,textarea {
     footer.tablet-sizefill,
     aside.tablet-sizefill,
     nav.tablet-sizefill,
-    .col.tablet-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
+    .row.tablet-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
     section.tablet-sizefit,
     article.tablet-sizefit,
     header.tablet-sizefit,
     footer.tablet-sizefit,
     aside.tablet-sizefit,
     nav.tablet-sizefit,
-    .col.tablet-sizefit {width:auto!important;}
+    .row.tablet-sizefit {width:auto!important;}
 
     .tablet-center {
         float:none !important;
@@ -1696,14 +1696,14 @@ input,textarea {
     footer.phone-sizefill,
     aside.phone-sizefill,
     nav.phone-sizefill,
-    .col.phone-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
+    .row.phone-sizefill {display:table-cell !important;float:none!important;min-width:50px!important;width:10000px!important;}
     section.phone-sizefit,
     article.phone-sizefit,
     header.phone-sizefit,
     footer.phone-sizefit,
     aside.phone-sizefit,
     nav.phone-sizefit,
-    .col.phone-sizefit {width:auto!important;}
+    .row.phone-sizefit {width:auto!important;}
 
     .phone-center {
         float:none !important;
@@ -2001,19 +2001,19 @@ input,textarea {
 }
 
 @media (min-width: 768px) {
-    .desktop-hidden,.col.desktop-hidden {
+    .desktop-hidden,.row.desktop-hidden {
         display:none !important;
     }
 }
 
 @media (max-width:767px) {
-    .mobile-hidden,.col.mobile-hidden {
+    .mobile-hidden,.row.mobile-hidden {
         display:none !important;
     }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-    .tablet-hidden,.col.tablet-hidden {
+    .tablet-hidden,.row.tablet-hidden {
         display:none !important;
     }
 }
